--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "asli-menu-partner",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "axios": "^1.5.1",
     "firebase": "^10.5.0",
     "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
