--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "asli-menu-partner",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +12,7 @@
     "@types/react-dom": "^18.2.13",
     "axios": "^1.5.1",
     "firebase": "^10.5.0",
+    "query-string": "^8.1.0",
     "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,7 +33,8 @@
     "workbox-range-requests": "^6.6.0",
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0",
-    "workbox-streams": "^6.6.0"
+    "workbox-streams": "^6.6.0",
+    "zustand": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
