--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.13",
     "axios": "^1.5.1",
     "firebase": "^10.5.0",
+    "moment": "^2.29.4",
     "query-string": "^8.1.0",
     "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
