added config.nogit.sh and REACT_APP_API_HOST in env variables

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "zustand": "^4.4.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "clean": "rm -rf build",
+    "start": "npm run clean && react-scripts start",
+    "start-local": "source config.nogit.sh && npm run start",
+    "build": "npm run clean && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
